--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,46 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
+    tools:context=".fragments.HistoryFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="180dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:background="@drawable/header"
-            android:orientation="vertical"
-            android:paddingHorizontal="30dp">
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:text="Histórico"
-                android:textColor="@color/white"
-                android:textSize="28dp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Exibe o histórico de lançamentos de compras de ativos"
-                android:textColor="@color/white"
-                android:layout_marginTop="35dp"/>
-        </LinearLayout>
-    </RelativeLayout>
-
+    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:paddingHorizontal="30dp"
         android:orientation="vertical">
@@ -49,13 +19,13 @@
             android:id="@+id/txtProcurarLancamento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Procurar Lançamento"
             app:startIconDrawable="@drawable/lupa"
             app:startIconContentDescription="Busca o ativo que for digitado">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Procurar Lançamento"
                 android:layout_marginBottom="10dp"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -215,15 +185,9 @@
                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#0F4163"
-        app:menu="@menu/bottom_navigation_menu"
-        app:itemTextColor="@color/white"
-        app:itemIconTint="@color/white"/>
 
-</LinearLayout>
+
+</FrameLayout>
