--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,7 +20,7 @@
             android:paddingHorizontal="30dp">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/titulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -28,7 +29,7 @@
                 android:textSize="28dp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/subTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Valor Aplicado"
@@ -36,7 +37,7 @@
                 android:layout_marginTop="35dp"/>
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/valorAplicado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="R$ 1.000,00"
@@ -53,23 +54,11 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:gravity="center_vertical"
-            android:background="@drawable/card">
-
-            <TextView
-                android:id="@+id/lblValorBruto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Valor Bruto"
-                android:textColor="@color/black"
-                android:layout_marginLeft="30dp"/>
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/frameLayout"
+            />
 
     </LinearLayout>
 
@@ -83,3 +72,4 @@
         app:itemIconTint="@color/white"/>
 
 </LinearLayout>
+
