--- a/app/src/main/res/layout/addstock_screen.xml
+++ b/app/src/main/res/layout/addstock_screen.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/topAppBar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:title="Adicionar Transição"
+                    app:title="Adicionar Transação"
                     app:titleTextColor="#FFFFFF"
                     app:navigationIcon="@drawable/arrow_back_24px"
                     app:navigationIconTint="#FFFFFF"
@@ -40,6 +40,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingHorizontal="30dp">
+
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Comprar/Vender"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtTipoAtivo"
