--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,21 +6,18 @@
     tools:context=".fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-<!--    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="72dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_marginLeft="30dp"-->
-<!--        android:layout_marginRight="30dp"-->
-<!--        android:gravity="center_vertical"-->
-<!--        android:background="@drawable/card">-->
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:gravity="center_vertical"
+        android:background="@drawable/card">
 
-<!--        <TextView-->
-<!--            android:id="@+id/lblValorBruto"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Valor Bruto"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:layout_marginLeft="30dp"/>-->
-<!--    </FrameLayout>-->
+        <TextView
+            android:id="@+id/lblValorBruto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Valor Bruto"
+            android:textColor="@color/black"
+            android:layout_marginLeft="30dp"/>
+    </FrameLayout>
 </FrameLayout>
