--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -60,7 +60,7 @@
         android:backgroundTint="#0F4163"
         android:textColor="@color/white"
         app:cornerRadius="20dp"
-        android:onClick="screenNavBar"/>
+        android:onClick="authLogin"/>
 
     <TextView
         android:id="@+id/textView2"
