--- a/app/src/main/res/layout/signup_screen.xml
+++ b/app/src/main/res/layout/signup_screen.xml
@@ -122,7 +122,7 @@
         android:textColor="@color/white"
         android:layout_marginTop="35dp"
         app:cornerRadius="20dp"
-        android:onClick="screenLogin"/>
+        android:onClick="createAccount"/>
 
     <TextView
         android:id="@+id/textView4"
