--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="alertDialog" parent="@style/MaterialAlertDialog.Material3">
+        <item name="android:background">@color/cardview_light_background</item>
+    </style>
+
     <style name="Theme.InvestmentManager" parent="Base.Theme.InvestmentManager" />
 </resources>
