--- a/app/src/main/res/layout/addstock_screen.xml
+++ b/app/src/main/res/layout/addstock_screen.xml
@@ -38,8 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingHorizontal="30dp">
+        android:orientation="vertical">
 
         <com.google.android.material.materialswitch.MaterialSwitch
             android:layout_width="match_parent"
