--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -8,26 +8,25 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <!--<LinearLayout
+    <LinearLayout
         android:id="@+id/contentWallet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingHorizontal="30dp">-->
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtProcurarAtivo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Procurar Ativo"
+            android:layout_marginBottom="10dp"
             app:startIconDrawable="@drawable/lupa"
             app:startIconContentDescription="Busca o ativo que for digitado">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"/>
+                android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -36,7 +35,7 @@
             android:id="@+id/btnEntrar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginBottom="10dp"
             android:text="Adicionar Ativo"
             android:backgroundTint="#FFC749"
             android:textColor="@color/black"
@@ -45,91 +44,12 @@
             app:iconTint="#000000"
             android:onClick="screenAddStock"/>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/stocksRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
-            android:backgroundTint="#ECEDF0">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <!-- Title, secondary and supporting text -->
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="FII"
-                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="XPLG11"
-                        android:textAppearance="?attr/textAppearanceBodyMedium"
-                        android:textColor="?android:attr/textColorSecondary"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Valor total: R$ 1.113,00"
-                        android:textAppearance="?attr/textAppearanceBodyMedium"
-                        android:textColor="?android:attr/textColorSecondary"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Quantidade: 10"
-                        android:textSize="12sp"
-                        android:textAppearance="?attr/textAppearanceBodyMedium"
-                        android:textColor="?android:attr/textColorSecondary"
-                        />
-
-                </LinearLayout>
-
-                <!-- Buttons -->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:text="Alterar"
-                        android:textColor="#0F4163"
-                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
-                        app:icon="@drawable/plus"
-                        app:iconTint="#0F4163"
-                        android:onClick="screenAddStock"/>
-
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Excluir"
-                        android:textColor="#FFFFFF"
-                        android:backgroundTint="#B52424"
-                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-                        app:icon="@drawable/lixo"
-                        app:iconTint="#FFFFFF"/>
-                </LinearLayout>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-    <!--</LinearLayout>-->
+            tools:listitem="@layout/stocks_list" />
+    </LinearLayout>
 
 
 </FrameLayout>
