--- a/app/src/main/res/layout/historic_list.xml
+++ b/app/src/main/res/layout/historic_list.xml
@@ -24,14 +24,31 @@
                 android:padding="16dp">
 
                 <!-- Title, secondary and supporting text -->
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="GRND3 - Compra"
-                    android:textColor="#1C9838"
-                    android:textAppearance="?attr/textAppearanceTitleMedium"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/codigoAtivoHistorico"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="GRND3 - "
+                        android:textColor="#1C9838"
+                        android:textAppearance="?attr/textAppearanceTitleMedium"/>
+
+                    <TextView
+                        android:id="@+id/tipoHistorico"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Compra"
+                        android:textColor="#1C9838"
+                        android:textAppearance="?attr/textAppearanceTitleMedium"/>
+
+                </LinearLayout>
 
                 <TextView
+                    android:id="@+id/dataMovimentacaoHistorico"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -40,6 +57,7 @@
                     android:textColor="?android:attr/textColorSecondary"/>
 
                 <TextView
+                    android:id="@+id/quantidadeHistorico"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Quantidade: 10"
@@ -47,6 +65,7 @@
                     android:textColor="?android:attr/textColorSecondary"/>
 
                 <TextView
+                    android:id="@+id/valorTotalHistorico"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Valor total: R$ 1.113,00"
