--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -30,12 +30,32 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+            android:id="@+id/btnPesquisarAtivo"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:text="Pesquisar"
+            android:backgroundTint="#0F4163"
+            android:textColor="@color/white"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/lupa"
+            app:iconTint="#000000"
+            android:onClick="stocksData"/>
+
+        <com.google.android.material.button.MaterialButton
             style="@style/Widget.Material3.Button.ElevatedButton.Icon"
             android:id="@+id/btnEntrar"
-            android:layout_width="match_parent"
+            android:layout_width="190dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
             android:text="Adicionar Ativo"
             android:backgroundTint="#FFC749"
             android:textColor="@color/black"
@@ -43,6 +63,7 @@
             app:icon="@drawable/plus"
             app:iconTint="#000000"
             android:onClick="screenAddStock"/>
+    </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/stocksRecyclerView"
