--- a/app/src/main/res/layout/stocks_list.xml
+++ b/app/src/main/res/layout/stocks_list.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     tools:context=".fragments.WalletFragment">
 
     <com.google.android.material.card.MaterialCardView
