--- a/app/src/main/res/layout/addstock_screen.xml
+++ b/app/src/main/res/layout/addstock_screen.xml
@@ -22,14 +22,14 @@
                 android:background="#0F4163">
 
                 <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/topAppBar"
+                    android:id="@+id/topBarTransicao"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:title="Adicionar Transação"
                     app:titleTextColor="#FFFFFF"
                     app:navigationIcon="@drawable/arrow_back_24px"
                     app:navigationIconTint="#FFFFFF"
-                    android:onClick="screenWallet"/>
+                    />
 
             </com.google.android.material.appbar.AppBarLayout>
         </LinearLayout>
@@ -38,7 +38,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingHorizontal="15dp">
 
         <com.google.android.material.materialswitch.MaterialSwitch
             android:layout_width="match_parent"
@@ -51,7 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Tipo do Ativo">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -65,7 +65,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Código do Ativo">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -79,7 +78,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Data da Compra">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -93,7 +91,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Quantidade">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -107,7 +104,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Preço (R$)">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -121,7 +117,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:hint="Outros Custos">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -149,13 +144,13 @@
         <com.google.android.material.divider.MaterialDivider
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             app:dividerColor="#79747E"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
 
             <Button
                 android:id="@+id/btnSalvar"
@@ -167,7 +162,8 @@
                 android:textColor="#FFFFFF"
                 app:cornerRadius="100dp"
                 app:icon="@drawable/plus"
-                app:iconTint="#FFFFFF"/>
+                app:iconTint="#FFFFFF"
+                android:onClick="salvarTransacao"/>
 
             <Button
                 android:id="@+id/btnCancelar"
