--- a/app/src/main/res/layout/historic_list.xml
+++ b/app/src/main/res/layout/historic_list.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    tools:context=".fragments.HistoryFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card1"
