Getting values fields of addStock screen

--- a/app/src/main/res/layout/addstock_screen.xml
+++ b/app/src/main/res/layout/addstock_screen.xml
@@ -42,6 +42,7 @@
         android:paddingHorizontal="15dp">
 
         <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/typeStock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
