Getting the information from the card to update the stock

--- a/app/src/main/res/layout/stocks_list.xml
+++ b/app/src/main/res/layout/stocks_list.xml
@@ -80,8 +80,7 @@
                     android:textColor="#0F4163"
                     style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                     app:icon="@drawable/plus"
-                    app:iconTint="#0F4163"
-                    android:onClick="updateStock"/>
+                    app:iconTint="#0F4163"/>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnExcluirAtivo"
@@ -92,8 +91,7 @@
                     android:backgroundTint="#B52424"
                     style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                     app:icon="@drawable/lixo"
-                    app:iconTint="#FFFFFF"
-                    />
+                    app:iconTint="#FFFFFF"/>
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
