--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,5 +9,10 @@
         <item name="android:background">@color/cardview_light_background</item>
     </style>
 
+    <style name="myFullscreenAlertDialogStyle" parent="Theme.AppCompat.Light.NoActionBar">      //no actionbar, but status bar exists
+        <item name="android:windowFullscreen">true</item>                       //remove status bar
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>        //smooth animation
+    </style>
+
     <style name="Theme.InvestmentManager" parent="Base.Theme.InvestmentManager" />
 </resources>
