--- a/app/src/main/res/layout/addstock_screen.xml
+++ b/app/src/main/res/layout/addstock_screen.xml
@@ -113,6 +113,7 @@
             android:hint="Quantidade">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtQuantidadeET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -126,6 +127,7 @@
             android:hint="Preço (R$)">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtPrecoET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -156,7 +158,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="R$ 1.000,00"
+            android:text="R$ 0"
             android:textSize="22dp"
             android:textStyle="bold"/>
 
