--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.WalletFragment">
+    tools:context=".fragments.WalletFragment"
+    android:id="@+id/fragmentWallet">
 
     <!-- TODO: Update blank fragment layout -->
 
